syntax = "proto3";

package quizzPackage;

service quizzService {
  rpc GetQuizzes(Empty) returns (stream Quiz);
  rpc TestResult(TestResultRequest) returns (TestResultResponse);
}

message Empty {}

message Quiz {
  int32 id = 1;
  string text = 2;
  repeated string options = 3;
  string correct = 4;
}

message TestResultRequest {
  string name = 1;
  int32 corrects = 2;
}

message TestResultResponse {
  string name = 1;
  int32 result = 2;
}
